--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   
   flutter_swiper: ^1.1.2
   http: any
-  flutter_svg: ^0.14.0
+  flutter_svg: ^0.17.3+1
   flare_splash_screen: ^2.1.2
   getflutter: ^1.0.11
   pin_code_text_field: ^1.3.6
